--- a/todo
+++ b/todo
@@ -77,10 +77,8 @@ usedTokens tábla:
 
 
 
-
-
-
 KÉSŐBBI TERVEK:
     -Asztali app (Online / Offline)
     -Android app (Online / Offline)
+    -VueJS alkalmazása (single page app)
     
